force-app/main/default/objects/TOBJ_Monitoramento__c/TOBJ_Monitoramento__c.object-meta.xml
<CustomObject>
    <label>HSEQ Evaluation Invite</label>
    <nameField>
        <displayFormat>MO# {YYYY}{MM}{DD}-{00}</displayFormat>
        <label>Código Monitoramento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HSEQ Evaluation Invite</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>