force-app/main/default/objects/TOBJ_Monitoramento__c/fields/EndDateHoje__c.field-meta.xml
<CustomField>
    <fullName>EndDateHoje__c</fullName>
    <description>verifica se o end date é hoje e se esta ativo.</description>
    <formula>AND(TODAY() &gt;  TCF_Termino__c, ISPICKVAL(TCF_Status__c, &apos;Active&apos;))</formula>
    <label>HiddenEndDateHojeActive?</label>
    <type>Checkbox</type>
</CustomField>