force-app/main/default/objects/TOBJ_Monitoramento__c/fields/TCF_AdictionalEmail1__c.field-meta.xml
<CustomField>
    <fullName>TCF_AdictionalEmail1__c</fullName>
    <label>Adictional email 1</label>
    <type>Email</type>
</CustomField>