force-app/main/default/objects/TOBJ_Monitoramento__c/fields/TCF_AdictionalEmail2__c.field-meta.xml
<CustomField>
    <fullName>TCF_AdictionalEmail2__c</fullName>
    <label>Adictional email 2</label>
    <type>Email</type>
</CustomField>