force-app/main/default/objects/TOBJ_Monitoramento__c/fields/TCF_AdictionalEmail3__c.field-meta.xml
<CustomField>
    <fullName>TCF_AdictionalEmail3__c</fullName>
    <label>Adictional email 3</label>
    <type>Email</type>
</CustomField>