force-app/main/default/objects/TOBJ_Monitoramento__c/fields/TCF_Comments__c.field-meta.xml
<CustomField>
    <fullName>TCF_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>