force-app/main/default/objects/TOBJ_Monitoramento__c/fields/TCF_Conta__c.field-meta.xml
<CustomField>
    <fullName>TCF_Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Monitoramentos</relationshipName>
    <type>Lookup</type>
</CustomField>