force-app/main/default/objects/TOBJ_Monitoramento__c/fields/TCF_DataAtivacao__c.field-meta.xml
<CustomField>
    <fullName>TCF_DataAtivacao__c</fullName>
    <label>Activation Date</label>
    <type>DateTime</type>
</CustomField>