force-app/main/default/objects/TOBJ_Monitoramento__c/fields/TCF_DataInativacao__c.field-meta.xml
<CustomField>
    <fullName>TCF_DataInativacao__c</fullName>
    <label>Inactivation Date</label>
    <type>DateTime</type>
</CustomField>