force-app/main/default/objects/TOBJ_Monitoramento__c/fields/TCF_DentroPrazo__c.field-meta.xml
<CustomField>
    <fullName>TCF_DentroPrazo__c</fullName>
    <formula>IF(AND(TCF_Inicio__c &lt;= TODAY(),
       TCF_Termino__c &gt;= TODAY()
   ),
   true,
   false
)</formula>
    <label>HiddenDentroDoPrazo?</label>
    <type>Checkbox</type>
</CustomField>