force-app/main/default/objects/TOBJ_Monitoramento__c/fields/TCF_Email__c.field-meta.xml
<CustomField>
    <fullName>TCF_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>