force-app/main/default/objects/TOBJ_Monitoramento__c/fields/TCF_ExecutarNoMesAtual__c.field-meta.xml
<CustomField>
    <fullName>TCF_ExecutarNoMesAtual__c</fullName>
    <formula>IF(MOD(MONTH(TODAY()),2) = 0,
   IF(ISPICKVAL(TCF_MesCiclo__c,&apos;Odd&apos;),
      false,
      true
   ),
   IF(ISPICKVAL(TCF_MesCiclo__c,&apos;Odd&apos;),
      true,
      false
   )
)</formula>
    <label>HiddenExecutarNoMesAtual?</label>
    <type>Checkbox</type>
</CustomField>