force-app/main/default/objects/TOBJ_Monitoramento__c/fields/TCF_Inicio__c.field-meta.xml
<CustomField>
    <fullName>TCF_Inicio__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>