force-app/main/default/objects/TOBJ_Monitoramento__c/fields/TCF_MesCiclo__c.field-meta.xml
<CustomField>
    <fullName>TCF_MesCiclo__c</fullName>
    <label>Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Even</fullName>
            </value>
            <value>
                <fullName>Odd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>