force-app/main/default/objects/TOBJ_Monitoramento__c/fields/TCF_ReasonRejection__c.field-meta.xml
<CustomField>
    <fullName>TCF_ReasonRejection__c</fullName>
    <label>Reason for Rejection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>