force-app/main/default/objects/TOBJ_Monitoramento__c/fields/TCF_Termino__c.field-meta.xml
<CustomField>
    <fullName>TCF_Termino__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>