force-app/main/default/objects/TOBJ_Monitoramento__c/recordTypes/TRT_Master.recordType-meta.xml
<RecordType>
    <fullName>TRT_Master</fullName>
    <active>true</active>
    <label>Master</label>
</RecordType>