force-app/main/default/objects/TOBJ_Monitoramento__c/validationRules/CantChangeAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>CantChangeAccount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISCHANGED( TCF_Conta__c ),
				NOT(ISPICKVAL(TCF_Status__c, &quot;New&quot;))
				)</errorConditionFormula>
    <errorMessage>A conta do Monitoramento não pode ser alterada. Caso precise monitorar um outro fornecedor criar um registro de monitoramento.</errorMessage>
</ValidationRule>