force-app/main/default/objects/TOBJ_Monitoramento__c/validationRules/CantChangeInactive.validationRule-meta.xml
<ValidationRule>
    <fullName>CantChangeInactive</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(TCF_Status__c), &quot;Inactive&quot;)</errorConditionFormula>
    <errorMessage>The selected monitoring is inactive. ﻿To start a new monitoring use the clone option.</errorMessage>
</ValidationRule>