force-app/main/default/objects/TOBJ_Monitoramento__c/validationRules/CantChangeStartDateEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CantChangeStartDateEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISPICKVAL(TCF_Status__c, &quot;New&quot;)),
				OR(
								ISCHANGED(TCF_Inicio__c),
								ISCHANGED(TCF_Termino__c)
				)
)</errorConditionFormula>
    <errorMessage>Monitoring after starting cant change the start date and end date.</errorMessage>
</ValidationRule>