force-app/main/default/objects/TOBJ_Monitoramento__c/validationRules/CheckEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>TCF_Termino__c  &lt;=  TCF_Inicio__c</errorConditionFormula>
    <errorMessage>A data de término não pode ser igual ou menor que a data de início.</errorMessage>
</ValidationRule>