force-app/main/default/objects/TOBJ_Monitoramento__c/validationRules/CheckStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
				AND(
								ISNEW(),
								TCF_Inicio__c &lt; TODAY()
				),
				AND(
								NOT(ISNEW()),
								ISCHANGED(TCF_Inicio__c),
								TCF_Inicio__c &lt; TODAY()
				)
)</errorConditionFormula>
    <errorMessage>A data de início não pode ser menor que a data atual.</errorMessage>
</ValidationRule>