force-app/main/default/objects/TOBJ_Monitoramento__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>TCF_Conta__c</columns>
    <columns>TCF_Inicio__c</columns>
    <columns>TCF_Termino__c</columns>
    <columns>TCF_MesCiclo__c</columns>
    <columns>TCF_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>